# pixeltales

./: .cursorrules  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  default_scene.py  main.py
backend/app/api/endpoints/: config.py  scenes.py
backend/app/core/: config.py
backend/app/db/: database.py  init_db.py  models.py
backend/app/models/: base.py  character.py  config.py  conversation.py  llm.py  scene.py
backend/app/services/: conversation_manager.py  llm_manager.py  scene_config_manager.py  scene_config_service.py  scene_manager.py  scene_service.py  scene_state_snapshot_service.py
backend/app/utils/: error_handling.py
docs/: api.md  architecture.md  installation.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ColorPalette.tsx  ConversationHistory.tsx  ConversationStatsChart.tsx  SceneInfo.tsx  SceneProposalForm.tsx  SceneProposalList.tsx
frontend/src/game/: MainScene.ts  UIScene.ts  config.ts
frontend/src/hooks/: use-auto-scroll.ts  use-config.ts  use-scenes.ts  use-view-mode.ts
frontend/src/services/: socket.ts
frontend/src/types/: scene.ts
frontend/src/utils/: assert-unreachable.ts  format.ts  logger.ts
(+7 files in other folders)
